# rustash

./: .crates.toml  .crates2.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT7_INTEGRATION.md  CONTRIBUTING_WITH_AI.md  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  SECURITY.md  USER_GUIDE.md  check_schema.sql  docker-compose.yml  init-age.sql  pyproject.toml
PRPs/PRPs/: prp_rustash.md
PRPs/completed/: prp_rustash_v1.0_COMPLETED.md
claude_md_files/: CLAUDE-RUST.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/rustash-cli/: Cargo.toml
crates/rustash-cli/src/: db.rs  fuzzy.rs  gui.rs  main.rs  utils.rs
crates/rustash-cli/src/commands/: add.rs  graph.rs  list.rs  mod.rs  rag.rs  snippets.rs  stash_cmds.rs  use_snippet.rs
crates/rustash-cli/tests/: cli_integration.rs  gui_integration.rs
crates/rustash-core/: Cargo.toml  rustash.db
crates/rustash-core/migrations/2025-07-05-191542_create_snippets/: down.sql  up.sql
crates/rustash-core/migrations/2025-07-07-020103_update_to_uuid_primary_key/: down.sql  up.sql
crates/rustash-core/migrations/2025-07-08-022249_create_snippets/: down.sql  up.sql
crates/rustash-core/migrations/2025-07-08-030142_fix_fts_table/: down.sql  up.sql
crates/rustash-core/migrations/2025-07-13-031121_create_vector_support/: down.sql  up.sql
crates/rustash-core/migrations/2025-07-13-031821_create_relations_table/: up.sql
crates/rustash-core/migrations/2025-07-13-143159_fix_vector_support/: up.sql
crates/rustash-core/migrations/20250706213550_refactor_to_uuid/: down.sql  up.sql
crates/rustash-core/migrations_backup_20250707_222134/2025-07-05-191542_create_snippets/: down.sql  up.sql
crates/rustash-core/src/: config.rs  database.rs  error.rs  graph.rs  lib.rs  memory.rs  models.rs  rag.rs  schema.rs  snippet.rs  stash.rs  storage.rs
crates/rustash-core/src/database/: connection_pool.rs  mod.rs
crates/rustash-core/src/storage/: in_memory.rs  mod.rs  postgres.rs  sqlite.rs
crates/rustash-core/tests/: check_migrations.rs  check_schema.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  lib.rs
scripts/: run-tests.sh  test-backend.sh
xtask/: Cargo.toml
xtask/src/: main.rs
