[workspace]
members = [
    "crates/rustash-core",
    "crates/rustash-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Rustash Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustash/rustash"
description = "A modern Rust-based snippet manager with CLI and desktop interfaces"
keywords = ["cli", "snippets", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
termcolor = "1.4"
dirs = "5.0"

# Database dependencies
diesel = { version = "2.2", features = ["chrono", "uuid", "r2d2"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
r2d2 = "0.8"

# SQLite backend (default)
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# PostgreSQL backend (optional)
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
bb8 = { version = "0.8" }
bb8-postgres = { version = "0.8" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Async utilities
async-trait = "0.1"
erased-serde = "0.3"

# Fuzzy finder and search
skim = "0.10"
tantivy = "0.22"

# Clipboard integration
arboard = "3.4"

# Vector search (commented out due to build issues)
# sqlite-vss = { version = "0.1" }

# Desktop GUI (Tauri)
tauri = { version = "2.0", features = ["shell-open"] }

# Testing
proptest = "1.5"
tempfile = "3.12"

# Regex for pattern matching
regex = "1.10"

# Utility crates
rustash-core = { path = "crates/rustash-core" }
rustash-cli = { path = "crates/rustash-cli" }

# Lazy initialization
lazy_static = "1.4"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"
cognitive_complexity = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"