[workspace]
members = [
    "crates/rustash-core",
    "crates/rustash-cli",
    "xtask"
]
resolver = "2"

[workspace.dependencies.lazy_static]
version = "1.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Rustash Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustash/rustash"
description = "A modern Rust-based snippet manager with a powerful CLI interface"
keywords = ["cli", "snippets", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]



[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
termcolor = "1.4"
dirs = "5.0"
colored = "2.1"
home = "0.5"

# Database dependencies
diesel = { version = "2.2", features = ["chrono", "uuid"] }
diesel_migrations = { version = "2.2" }

# Backend-specific dependencies should be specified in the respective crates

# Async utilities
async-trait = "0.1"
erased-serde = "0.3"
pretty_env_logger = "0.5"

# Fuzzy finder and search
skim = "0.10"
tantivy = "0.22"

# Clipboard integration
arboard = "3.4"

# Vector search (commented out due to build issues)
# sqlite-vss = { version = "0.1" }



# Testing
proptest = "1.5"
tempfile = "3.12"

# Regex for pattern matching
regex = "1.10"

# Configuration management
config = "0.14"
notify = "6.1"
walkdir = "2.4"
which = "5.0"

# Utility crates
rustash-core = { path = "crates/rustash-core" }
rustash-cli = { path = "crates/rustash-cli" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
cognitive_complexity = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"