[package]
name = "rustash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rustash"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# CLI dependencies
clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
termcolor.workspace = true

# Core library
rustash-core.workspace = true
rustash-utils.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[features]
default = ["sqlite"]
sqlite = ["rustash-core/sqlite"]
postgres = ["rustash-core/postgres"]