[package]
name = "rustash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database
diesel.workspace = true
diesel_migrations.workspace = true
r2d2.workspace = true

# SQLite backend (default)
libsqlite3-sys = { workspace = true, optional = true }

# PostgreSQL backend (optional)
diesel-async = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }

# Search and fuzzy matching
tantivy.workspace = true
skim.workspace = true

# Vector search
sqlite-vss = { workspace = true, optional = true }

# Clipboard
arboard.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[features]
default = ["sqlite"]
sqlite = ["libsqlite3-sys", "sqlite-vss"]
postgres = ["diesel-async", "bb8"]
vector-search = ["sqlite-vss"]