[package]
name = "rustash-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop application for Rustash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustash-desktop"
path = "src/main.rs"

[dependencies]
# Core library
rustash-core = { path = "../rustash-core", default-features = false }

# Tauri
tauri = { version = "2.0.0", features = ["shell-all", "fs-all", "window-all"], optional = true }
tauri-plugin-fs = { version = "2.0.0-rc.6", optional = true }
tauri-plugin-shell = { version = "2.0.0-rc.0", optional = true }
tauri-plugin-store = { version = "2.0.0-rc.0", optional = true }
tauri-plugin-window-state = { version = "2.0.0-rc.0", optional = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Logging
log = "0.4"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Configuration
config = { workspace = true }

# Platform-specific paths
dirs = { workspace = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = ["tauri"]
tauri = ["tauri-impl"]
tauri-impl = ["dep:tauri", "dep:tauri-plugin-fs", "dep:tauri-plugin-shell", "dep:tauri-plugin-store", "dep:tauri-plugin-window-state"]