[package]
name = "rustash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rustash"
path = "src/main.rs"

[dependencies]
# Core library
rustash-core = { workspace = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }

# User interaction
dialoguer = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# UUID handling
uuid = { workspace = true }

# Clipboard integration
arboard = { workspace = true }

# Fuzzy finder
skim = { workspace = true }

# Lazy initialization
lazy_static = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Platform-specific paths
dirs = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Logging
log = "0.4"

# Database
# Note: Must match the versions used in rustash-core
r2d2 = { workspace = true }
diesel = { workspace = true, features = ["r2d2", "chrono", "uuid"] }
diesel_migrations = { workspace = true }
serde_json = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Optional GUI dependencies
eframe = { version = "0.27", optional = true }
egui = { version = "0.27", optional = true }

[dev-dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
assert_matches = "1.5.0"
# GUI testing temporarily disabled due to egui_test not being available on crates.io
serial_test = "2.0"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Terminal colors
termcolor = { workspace = true }

[features]
default = ["sqlite", "gui"]
sqlite = ["rustash-core/sqlite"]
postgres = ["rustash-core/postgres"]
gui = ["dep:eframe", "dep:egui"]
vector-search = ["rustash-core/vector-search"]