[package]
name = "rustash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rustash"
path = "src/main.rs"

[dependencies]
# Core library
rustash-core = { workspace = true }

# Command-line interface
clap = { version = "4.5", features = ["derive"] }

# Logging and output
colored = { workspace = true }
log = "0.4"
pretty_env_logger = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File system operations
walkdir = { workspace = true }

# Platform-specific paths
home = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Terminal interactions
dialoguer = { workspace = true }

# Configuration management
config = { workspace = true }

# File watching
notify = { workspace = true }

# Command execution
which = { workspace = true }

# Shell completion
clap_complete = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
# GUI testing temporarily disabled due to egui_test not being available on crates.io
serial_test = "2.0"

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Terminal colors
termcolor = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["rustash-core/sqlite"]
postgres = ["rustash-core/postgres"]
# GUI feature is disabled by default due to dependency issues
# gui = ["dep:eframe", "dep:egui"]
vector-search = ["rustash-core/vector-search"]