[package]
name = "rustash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
diesel = { workspace = true, features = ["chrono", "serde_json", "uuid"] }
diesel_migrations = { workspace = true }
diesel-async = { version = "0.5", default-features = false }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = "0.4"

# Connection pooling
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }

# Platform-specific paths
home = "0.5"

# Vector search (experimental)
hnsw_rs = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
# Default to SQLite for backward compatibility
default = ["sqlite"]

# SQLite backend
sqlite = [
    "diesel/sqlite",
    "diesel-async/sqlite"
]

# PostgreSQL backend
postgres = [
    "diesel/postgres",
    "bb8",
    "bb8-postgres",
    "diesel-async/postgres"
]

# Vector search (experimental)
vector-search = ["hnsw_rs"]