[package]
name = "rustash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rustash snippet manager"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
diesel = { workspace = true, features = ["chrono", "serde_json", "uuid"] }
diesel_migrations = { workspace = true }
diesel-async = { version = "0.5", default-features = false }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
bincode = "1"

# Connection pooling
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }

# Platform-specific paths
home = "0.5"

# Vector search (experimental)
hnsw_rs = { version = "0.3", optional = true }
pgvector = { version = "0.3.0", features = ["diesel"], optional = false }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
# Default build includes both database backends, allowing for runtime selection.
default = ["sqlite", "postgres"]

# SQLite backend dependencies
sqlite = [
    "diesel/sqlite",
    "diesel-async/sqlite"
]

# PostgreSQL backend dependencies
postgres = [
    "diesel/postgres",
    "bb8",
    "diesel-async/postgres"
]

# Vector search (experimental)
vector-search = ["dep:hnsw_rs"]
