[package]
name = "rustash-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility functions for Rustash"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true